--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@webpack-cli/generators": "^3.0.2",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.7.3",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "gh-pages": "^5.0.0",
-    "html-webpack-plugin": "^5.5.1",
-    "mini-css-extract-plugin": "^2.7.5",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.3.0",
     "prettier": "^2.8.8",
@@ -25,12 +26,12 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
-    "terser-webpack-plugin": "^5.3.10",
+    "terser-webpack-plugin": "^5.3.14",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "webpack": "^5.99.8",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   },
   "description": "My webpack project",
   "scripts": {
